[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kani-tts-2"
version = "0.0.4"
description = "Text-to-speech using neural audio codec and causal language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0" }
authors = [
    {name = "simonlob", email = "simonlobgromov@gmail.com"}
]
keywords = ["tts", "text-to-speech", "audio", "nemo", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "torch>=2.8.0",
    "nemo-toolkit[tts]>=2.5",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "omegaconf>=2.3.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
audio = [
    "soundfile>=0.12.0",
]

[project.urls]
Homepage = "https://www.nineninesix.ai/"
Repository = "https://github.com/nineninesix-ai/kani-tts-2"
Documentation = "https://github.com/nineninesix-ai/kani-tts-2/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["kani_tts*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
